<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:nextFocusLeft="@id/parent_layout"
    android:nextFocusUp="@id/parent_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/fair_blue"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_weight="1"
            android:gravity="top|center"
            android:minHeight="@dimen/_100sdp"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_circle_white_color"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/app_icon" />

            <TextView
                android:id="@+id/erp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:padding="10dp"
            android:text="@string/txt_copyright"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>